# xls-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md  TODO.md  test_rt_xlsx_avro_11.xlsx  test_rt_xlsx_avro_12.avro  test_wf_filter_in_4.csv  test_wf_sort_in_1776517954617940.csv  test_wf_sort_out_1776517954617941.csv
benches/: performance.rs
examples/: duplicates.csv  employees.avro  employees.csv  employees.parquet  employees.xlsx  lookup.avro  lookup.csv  numbers.csv  numbers.parquet  sales.avro  sales.csv  sales.parquet  sales.xlsx  test_rt_xlsx_avro_out_13.csv
src/: anomaly.rs  api.rs  capability_catalog.rs  common.rs  config.rs  converter.rs  csv_handler.rs  encryption.rs  error.rs  error_traits.rs  format_detector.rs  geospatial.rs  google_sheets.rs  handler_registry.rs  helpers.rs  lib.rs  lineage.rs  main.rs  mcp.rs  mocks.rs  plugins.rs  profiling_handler.rs  quality.rs  regex_cache.rs  streaming.rs  streaming_ops.rs  string_utils.rs  text_analysis_handler.rs  timeseries.rs  traits.rs  types.rs  validation.rs  workflow.rs
src/capabilities/: convert.rs  core.rs  excel_read.rs  excel_write.rs  filter.rs  formula.rs  mod.rs  registry.rs  sort.rs  workflow.rs
src/cli/: format.rs  handler.rs  mod.rs  runtime.rs
src/columnar/: avro.rs  mod.rs  parquet.rs
src/excel/: cell_typer.rs  chart.rs  feature_detector.rs  mod.rs  reader.rs  types.rs  writer.rs
src/formula/: evaluator.rs  functions.rs  mod.rs  parser.rs  types.rs
src/operations/: core.rs  (+7 more)
tests/: generate_examples.rs  test_advanced_excel.rs  test_basic.rs  test_cli_integration.rs  test_cli_read_format.rs  test_columnar.rs  test_config.rs  test_converter.rs  test_csv_handler.rs  test_encryption.rs  test_error.rs  test_excel.rs  test_excel_parity.rs  test_formula.rs  test_geospatial.rs  test_google_sheets.rs  test_handler_registry.rs  test_mcp_registry.rs  test_operations.rs  test_parity_smoke.rs  test_plugins.rs  test_streaming.rs  test_timeseries.rs  test_traits.rs  test_workflow.rs  test_xlsx_validation.rs  test_xlsx_writer_golden.rs
(+34 files in other folders)
