[package]
name = "xls-rs"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/xls-rs"
readme = "README.md"
homepage = "https://github.com/yingkitw/xls-rs"
documentation = "https://docs.rs/xls-rs"
keywords = ["csv", "excel", "spreadsheet", "parquet", "cli"]
categories = [
    "command-line-utilities",
    "encoding",
    "data-structures",
    "parsing",
    "development-tools",
]
description = """
A powerful CLI tool and library for spreadsheet manipulation with pandas-style operations.
Supports CSV, Excel (XLSX, XLS, ODS), Parquet, and Avro formats with formula evaluation,
data transformation, and comprehensive analytics capabilities.
"""

[lib]
name = "xls_rs"
path = "src/lib.rs"

[[bin]]
name = "xls-rs"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
chrono = "0.4"
calamine = "0.26"
zip = "2.2"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
parquet = { version = "54", features = ["arrow"] }
arrow-array = "54"
arrow-schema = "54"
apache-avro = "0.17"
toml = "0.8"
dirs = "5.0"
glob = "0.3"
rayon = "1.10"
ureq = "2.12"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "limit"], optional = true }
tempfile = "3.12"
notify = { version = "6", optional = true }
ctrlc = { version = "3", optional = true }

[features]
default = ["watch"]
api = ["axum", "tower", "tower-http"]
watch = ["dep:notify", "dep:ctrlc"]

# Smaller `target/` and fewer incremental rename failures when the disk is almost full.
[profile.dev]
incremental = false

[profile.test]
incremental = false

[dev-dependencies]
